# ccs-cpp

./: .build-compilers  .codecov.yml  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  grammar.txt  package.fig  tests.txt
.github/workflows/: ci.yml
api/ccs/: Ccs.h  ccs.h  context.h  domain.h  rule_builder.h  types.h
misc/: CCS.xml  README.md  ccs.vim  grammar.txt
src/: CMakeLists.txt  Ccs.cpp  Key.cpp  Key.h  Node.cpp  Node.h  Parser.cpp  Parser.h  Specificity.cpp  Specificity.h  ccs.cpp  context.cpp  domain.cpp  graphviz.cpp  graphviz.h  rule_builder.cpp  search_state.cpp  search_state.h
src/dag/: dag_builder.h  key.cpp  key.h  node.cpp  node.h  property.cpp  property.h  specificity.cpp  specificity.h  tally.cpp  tally.h
src/parser/: ast.cpp  ast.h  build_context.cpp  build_context.h  loader.h  parser.cpp  parser.h  parser2.cpp  parser2.h
test/: AllTests.cpp  CMakeLists.txt  ParserTest.cpp  acceptance_tests.cpp  all_tests.cpp  ccs_test.cpp  context_test.cpp
test/parser/: parser_test.cpp
